--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" type="text/css" href="/storage/emulated/0/FrontEnd Development/To-do list/reset.css">
-		<link rel="stylesheet" type="text/css" href=" https://rawgit.com/phong5683/phong5683.github.io/master/to-do-list-style.css ">
+		<link rel="stylesheet" type="text/css" href=" style.css">
 	</head>
   <body>
 	        <div class="container">
