--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
       </ul>
     </div>
 
-    <script type="text/javascript" src="https://rawgit.com/phong5683/phong5683.github.io/master/to-do-list-script.js "></script>
+    <script type="text/javascript" src="script.js"></script>
 
   </body>
 </html>
